# sdsDevOpsAssignment

./: .gitignore  readme.md
.github/workflows/: main.yml
cpp_project/: CMakeLists.txt
cpp_project/app/: main.cpp
cpp_project/lib/: CMakeLists.txt  mylib.cpp  mylib.h  platform.h
cpp_project/tests/: CMakeLists.txt  main.cpp  tests_mylib.cpp
py/acme_mylib/: _mylib.py  mylib.py
py/tests/: test_mylib.py
